Update color + example

--- a/examples/02_color.html
+++ b/examples/02_color.html
@@ -9,7 +9,12 @@
 
 </head>
 <body>
-<p>Tests #02 - Split Channels of clown: red, blue, green</p>
+<p>Tests #02 - Split Channels of clown: </p>
+<ul>
+<li>red, green, blue</li>
+<li>hue (BUGGED), saturation, value</li>
+<li>luminance</li>
+</ul>
 <div id="workspace"></div>
 
 <script type="text/javascript" src="./02_color.js"></script>
