--- a/examples/01_render.html
+++ b/examples/01_render.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/boats_360x288.js"></script>
 <script type="text/javascript" src="../samples/blobs_256x254.js"></script>
-<script type="text/javascript" src="../samples/clown_320x200.js"></script>
+<script type="text/javascript" src="../samples/clown_abgr_320x200.js"></script>
 
 </head>
 <body>
