--- a/examples/07_edgeDetect.html
+++ b/examples/07_edgeDetect.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>RankFilters-CPU Test GPU</title>
+<title>Edge Detection-CPU Test GPU</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
@@ -17,6 +17,6 @@
 
 </div>
 
-<script type="text/javascript" src="./06_rankFilters.js"></script>
+<script type="text/javascript" src="./07_edgeDetect.js"></script>
 </body>
 </html>
