--- a/examples/07_edgeDetect_benchmark.html
+++ b/examples/07_edgeDetect_benchmark.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>RankFilters-CPU Test GPU</title>
+<title>Edge Detection-CPU Benchmark</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
-<script type="text/javascript" src="../samples/boats_360x288.js"></script>
-<script type="text/javascript" src="../samples/blobs_256x254.js"></script>
-<script type="text/javascript" src="../samples/clown_rgba8888_320x200.js"></script>
 
 </head>
 <body>
@@ -17,6 +14,6 @@
 
 </div>
 
-<script type="text/javascript" src="./06_rankFilters.js"></script>
+<script type="text/javascript" src="./07_edgeDetect_benchmark.js"></script>
 </body>
 </html>
